syntax = "proto3";

package tsudzuri.v1;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

option go_package = "github.com/naka-sei/tsudzuri/api/protobuf/tsudzuri/v1;tsudzuriv1";

service TsudzuriService {
  // Page management
  rpc CreatePage(CreatePageRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/api/v1/pages"
      body: "*"
    };
  }

  rpc GetPage(GetPageRequest) returns (Page) {
    option (google.api.http) = {get: "/api/v1/pages/{page_id}"};
  }

  rpc ListPages(ListPagesRequest) returns (ListPagesResponse) {
    option (google.api.http) = {get: "/api/v1/pages"};
  }

  rpc EditPage(EditPageRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/api/v1/pages/{page_id}"
      body: "*"
    };
  }

  rpc DeletePage(DeletePageRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {delete: "/api/v1/pages/{page_id}"};
  }

  rpc AddLink(AddLinkRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/api/v1/pages/{page_id}/links"
      body: "*"
    };
  }

  rpc RemoveLink(RemoveLinkRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {delete: "/api/v1/pages/{page_id}/links"};
  }

  rpc JoinPage(JoinPageRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/api/v1/pages/{page_id}/join"
      body: "*"
    };
  }

  // User management
  rpc CreateUser(CreateUserRequest) returns (User) {
    option (google.api.http) = {
      post: "/api/v1/users"
      body: "*"
    };
  }

  rpc Login(LoginRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/api/v1/users/login"
      body: "*"
    };
  }
}

message Page {
  string id = 1;
  string title = 2;
  string invite_code = 3;
  repeated Link links = 4;
}

message Link {
  string url = 1;
  string memo = 2;
  int32 priority = 3;
}

message CreatePageRequest {
  string title = 1;
}

message GetPageRequest {
  string page_id = 1;
}

message ListPagesRequest {}

message ListPagesResponse {
  repeated Page pages = 1;
}

message EditPageRequest {
  string page_id = 1;
  string title = 2;
  repeated LinkInput links = 3;
}

message LinkInput {
  string url = 1;
  string memo = 2;
  int32 priority = 3;
}

message DeletePageRequest {
  string page_id = 1;
}

message AddLinkRequest {
  string page_id = 1;
  string url = 2;
  string memo = 3;
}

message RemoveLinkRequest {
  string page_id = 1;
  string url = 2;
}

message JoinPageRequest {
  string page_id = 1;
  string invite_code = 2;
}

message CreateUserRequest {
  string uid = 1;
}

message User {
  string id = 1;
  string uid = 2;
  string provider = 3;
  google.protobuf.StringValue email = 4;
}

message LoginRequest {
  string provider = 1;
  google.protobuf.StringValue email = 2;
}
